# AdventOfCode

./: .gitignore  CMakeLists.txt  README.md  pom.xml
2019/: README.md
2020/: README.md
2020/src/Day01/: PartA.java  PartB.java
2020/src/Day02/: PartA.java  PartB.java
2020/src/Day03/: PartA.java  PartB.java
2021/: README.md
2022/: README.md  day19.py  day23.py  day24.py  readFile.py
2022/inputFiles/: README.md
2022/testFiles/: testFile.py
2023/: README.md
2023/inc/: day01.h  day02.h  day03.h  day04.h  day05.h  main.h  test_readFile.h
2023/src/: day01.c  day02.c  day03.c  day04.c  day06.c  day07.py  day08.py  day10.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day20.py  day21.py  day23.py  day24.py  main.c  test_readFile.c
Util_Java/: CellState.java  Parse.java
y2022/: day01.py  day17.py  day24.py  readFile.py
y2023/: README.md
y2023/inc/: day02.h  day06.h  main.h  test_readFile.h
y2023/src/: day02.c  day05.c  day06.c  day09.py  day11.py  day14.py  day15.py  day17.py  day18.py  day19.py  day20.py  day24.py  day5part2.py  main.c
y2024/: Main.java  README.md
y2024/Input/: whyisthishere.txt
y2024/Solutions/: Day1.java  Day10.java  Day12.java  Day13.java  Day14.java  Day14Part2.py  Day15.java  Day2.java  Day24.java  Day3.java  Day4.java  Day5.java  Day6.java  Day7.java  Day8.java  Day9.java  Solution.java
y2024/Util/: Parse.java
y2025/: README.md
y2025/Input/: day1.txt
y2025/Solutions/: day1.py  day10.py  day11.py  day12.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
(+183 files in other folders)
